--- a/css/prices.css
+++ b/css/prices.css
@@ -139,6 +139,12 @@
   }
 }
 
+@media (max-width: 900px) {
+  .pricing-heading {
+    margin-left: 1.5rem;
+  }
+}
+
 @media (max-width: 780px) {
   .pricing-row {
     display: block;
