--- a/css/resources.css
+++ b/css/resources.css
@@ -185,6 +185,7 @@
   .mh-resources-heading {
     font-size: 4rem !important;
     margin-top: 5rem;
+    margin-left: 1.5rem;
   }
 
   .mh-resource-text {
