--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,14 @@
 .home-title {
   white-space: normal;
-
-  font-size: 3.5rem;
+  font-family: 'EB Garamond', serif;
+  
+  font-size: 3.7rem;
   margin-bottom: 1.3rem;
   line-height: 1.15;
 
   position: relative;
   letter-spacing: 0.04em;
-  font-weight: 800;
+  font-weight: 500;
   background: linear-gradient(120deg, var(--color-primary-dark), var(--color-primary-light));
   -webkit-background-clip: text;
   background-clip: text;
