--- a/css/services.css
+++ b/css/services.css
@@ -43,6 +43,12 @@
     
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
     border: 1px solid #eeeeee;
+
+    transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+.services-subheading:hover {
+  transform: translateY(-4px);
 }
 
 .services-subheading-wrapper {
@@ -69,9 +75,9 @@
 
 .service-img {
   display: block;
-  width: 100%;
-  height: 260px;
-  object-fit: cover;
+  width: auto;
+  height: 170px !important;
+  object-fit: cover !important;
 }
 
 .fix {
@@ -176,6 +182,10 @@
   .services-heading,
   .services-subheading {
     margin-left: 1.5rem;
+  }
+
+  .service-img {
+    height: 260px !important;
   }
 }
 
